--- a/contact.html
+++ b/contact.html
@@ -148,6 +148,7 @@
                     <div class="row d-flex justify-content-between align-items-center">
                         <div class="col-xl-9 col-lg-8">
                             <div class="footer-copy-right">
+                                Developed by Fachrul Abizar
                                 <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
                             </div>
                         </div>
