--- a/about.html
+++ b/about.html
@@ -56,7 +56,6 @@
                                                 <li><a href="speedtest">Speed Test</a></li>
                                                 <li><a href="career">Career</a></li>
                                                 <li><a href="games">Games</a></li>
-                                                <li><a href="artikel">Artikel</a></li>
                                             </ul>
                                         </nav>
                                     </div>
@@ -109,6 +108,7 @@
                     <div class="row d-flex justify-content-between align-items-center">
                         <div class="col-xl-9 col-lg-8">
                             <div class="footer-copy-right">
+                                Developed by Fachrul Abizar
                                 <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
                             </div>
                         </div>
