--- a/speedtest.html
+++ b/speedtest.html
@@ -54,9 +54,7 @@
                                                 <li><a href="about">About</a></li>
                                                 <li><a href="contact">Contact</a></li>
                                                 <li><a href="speedtest">Speed Test</a></li>
-                                                <li><a href="career">Career</a></li>
                                                 <li><a href="games">Games</a></li>
-                                                <li><a href="artikel">Artikel</a></li>
                                             </ul>
                                         </nav>
                                     </div>
@@ -97,7 +95,7 @@
                         <div class="col-xl-3 col-lg-4">
                             <!-- Footer Social -->
                             <div class="footer-social f-right">
-                                <a href="https://dangonid.github.io/"><i class="fas fa-globe"></i></a>
+                                <a href="https://fachrulabizar.com/"><i class="fas fa-globe"></i></a>
                                 <a href="https://api.whatsapp.com/send?phone=6285155331185" target="_blank"><i class="fab fa-whatsapp"></i></a>
                                 <a href="https://www.instagram.com/fachrul.abizar/" target="_blank"><i class="fab fa-instagram"></i></a>
                                 <a href="https://t.me/dangonid" target="_blank"><i class="fab fa-telegram"></i></a>
