--- a/games.html
+++ b/games.html
@@ -127,10 +127,10 @@
                         <div class="col-xl-3 col-lg-4">
                             <!-- Footer Social -->
                             <div class="footer-social f-right">
-                                <a href="https://fachrulabizar.com/" target="_blank"><i class="fas fa-globe"></i></a>
+                                <a href="https://dangonid.github.io/" target="_blank"><i class="fas fa-globe"></i></a>
                                 <a href="https://api.whatsapp.com/send?phone=6285155331185" target="_blank"><i class="fab fa-whatsapp"></i></a>
                                 <a href="https://www.instagram.com/fachrul.abizar/" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a href="https://t.me/dangonid" target="_blank"><i class="fab fa-telegram"></i></a>
+                                <a href="https://t.me/fachrulabizar" target="_blank"><i class="fab fa-telegram"></i></a>
                             </div>
                         </div>
                     </div>
